--- a/index.html
+++ b/index.html
@@ -2,31 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <title>Item Lister</title>
+  <style>
+    /* Add styles for green background */
+    .list-group-item:nth-child(odd) {
+      background-color: green;
+    }
+  </style>
 </head>
 <body>
-  <ul>
-    <li class="item">Item 1</li>
-    <li class="item">Item 2</li>
-    <li>Item 3</li>
-  </ul>
+  <header id="main-header" class="bg-success text-white p-4 mb-3">
+    <div class="container">
+      <h1 id="header-title">Item Lister <span style="display:none">123</span></h1>
+    </div>
+  </header>
+  <div class="container">
+   <div id="main" class="card card-body">
+    <h2 class="title">Add Items</h2>
+    <form class="form-inline mb-3">
+      <input type="text" class="form-control mr-2">
+      <input type="submit" class="btn btn-dark" value="Submit">
+    </form>
+    <h2 class="title">Items</h2>
+    <ul id="items" class="list-group">
+      <li class="list-group-item">Item 1</li>
+      <li class="list-group-item">Item 2</li>
+      <li class="list-group-item">Item 3</li>
+      <li class="list-group-item">Item 4</li>
+    </ul>
+   </div>
+  </div>
 
   <script>
-    // Add a new li element without the same class name
-    const newItem = document.createElement("li");
-    newItem.textContent = "Item 4";
+    // Add script to change font color of 2nd item to green
+    const secondItem = document.querySelector('#items li:nth-child(2)');
+    secondItem.style.color = 'green';
 
-    // Append the new li element to the ul list
-    const list = document.querySelector("ul");
-    list.appendChild(newItem);
-
-    // Access the new li element using getElementsByClassName
-    const items = document.getElementsByClassName("item");
-    console.log(items.length); // output: 2 (only selects elements with class name "item")
-    
-    // Access the new li element using getElementsByTagName
-    const liElements = document.getElementsByTagName("li");
-    console.log(liElements.length); // output: 4 (selects all li elements)
+    // Add script to change background color of odd items to green
+    const oddItems = document.querySelectorAll('#items li:nth-child(odd)');
+    oddItems.forEach(item => item.style.backgroundColor = 'green');
   </script>
 </body>
 </html>
